@@ -16,6 +16,11 @@ tree (maybe).
 
 Version 1.3.14 (In progress)
 ============================
+08/07/2002: samjam, Sam Liddicott
+            Properly implemented pointer system using php resources.
+            Still need to work out whether or not to let script-users call
+            destructors directly
+
 08/06/2002: beazley
             Upgraded mzscheme module to support version 201 and added
             overloading support.
